Fix dashboard layout grid stretching and add responsive styling for medium screens

--- a/src/components/info/contentMain/ContentMain.module.css
+++ b/src/components/info/contentMain/ContentMain.module.css
@@ -7,6 +7,7 @@
 
   & .informacion_usuario {
     animation: slideInLeft 0.8s ease-out;
+    width: 48%;
 
     & p {
       font-size: 22px;
@@ -24,6 +25,9 @@
 
   & img {
     padding-left: 100px;
+    max-width: 100%;
+    height: auto;
+    box-sizing: border-box;
   }
 
   & .right {
@@ -31,7 +35,8 @@
     display: grid;
     gap: 15px;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 160px auto;
+    grid-template-rows: auto auto;
+    align-items: start;
     grid-template-areas:
       'datos datos'
       'consejos registros';
@@ -112,6 +117,28 @@
 
   100% {
     transform: translateY(0px);
+  }
+}
+
+@media (max-width: 1100px) and (min-width: 769px) {
+  .container {
+    flex-direction: column;
+    align-items: center;
+
+    & .informacion_usuario {
+      width: 100%;
+    }
+
+    & .right {
+      width: 100%;
+      margin-top: 20px;
+    }
+
+    & img {
+      padding-left: 0;
+      display: block;
+      margin: 0 auto;
+    }
   }
 }
 
